[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/logos/Hamburger_icon.svg.png" type="Texture" id=1]
[ext_resource path="res://scenes/borgar/borgar.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/default.theme" type="Theme" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( -1262, -287 )
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="borgar_button" type="TextureButton" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="menu" type="Control" parent="HBoxContainer"]
margin_right = 324.0
margin_bottom = 1920.0
rect_min_size = Vector2( 324, 0 )
theme = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="profile" type="Button" parent="HBoxContainer/menu/VBoxContainer"]
margin_right = 324.0
margin_bottom = 32.0
text = "Go to Profile"

[node name="logout" type="Button" parent="HBoxContainer/menu/VBoxContainer"]
margin_top = 48.0
margin_right = 324.0
margin_bottom = 80.0
text = "Logout"

[node name="menu" type="Button" parent="HBoxContainer/menu/VBoxContainer"]
margin_top = 96.0
margin_right = 324.0
margin_bottom = 128.0
text = "Go to Menu"

[node name="back" type="Button" parent="HBoxContainer/menu/VBoxContainer"]
margin_top = 144.0
margin_right = 324.0
margin_bottom = 176.0
text = "Back"

[node name="rest_of_the_area" type="Button" parent="HBoxContainer"]
margin_left = 340.0
margin_right = 1096.0
margin_bottom = 1920.0
rect_min_size = Vector2( 756, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[connection signal="pressed" from="Control/borgar_button" to="." method="_on_borgar_button_pressed"]
[connection signal="pressed" from="HBoxContainer/menu/VBoxContainer/profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="HBoxContainer/menu/VBoxContainer/logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="HBoxContainer/menu/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/menu/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/rest_of_the_area" to="." method="_on_rest_of_the_area_pressed"]
